--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "tailwindcss": "^3.4.8"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "lightningcss": "^1.25.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0"
   }
 }
