--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
   "author": "Sai Vulavapati",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jsdom": "^24.1.1",
     "parcel": "^2.12.0",
     "postcss": "^8.4.41",
     "process": "^0.11.10",
@@ -18,6 +26,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "jest-environment-jsdom": "^29.7.0",
     "lightningcss": "^1.25.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
